# JNIDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/jnilearndemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNILearning.cpp  native-lib.cpp
app/src/main/java/com/example/jnilearndemo/: JNIUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jnilearndemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
